fixing dark mode focus/active on main nav

--- a/styles/global.css
+++ b/styles/global.css
@@ -77,7 +77,7 @@ header,
 
     &:focus {
       background-color: var(--color-text);
-      color: var(--color-background);
+      color: var(--color-brand-3-hover);
       outline: 3px solid var(--color-focus-ring);
       outline-offset: 0;
     }
@@ -85,7 +85,11 @@ header,
     .active,
     &:active {
       background-color: var(--color-text);
-      color: var(--color-background);
+      color: var(--color-brand-3-hover);
+
+      &:is(html.dark-mode &) {
+        background-color: var(--color-secondary);
+      }
     }
   }
 
